Tests/CompilerTests/negative/missing-parameter-ascription.hylo
//! no-std

fun f(x) {}
